# kmscon

./: NEWS.md  meson.build
docs/: meson.build
docs/man/: kmscon.1.xml.in  kmscon.conf.1.xml.in  kmscon.conf.5.xml.in
scripts/: kmscon-launch-gui.sh
scripts/etc/: kmscon.conf  kmscon.conf.example
src/: font.c  font.h  font_8x16.c  font_pango.c  font_rotate.c  font_rotate.h  font_unifont.c  kmscon_conf.c  kmscon_conf.h  kmscon_dummy.c  kmscon_main.c  kmscon_seat.c  kmscon_terminal.c  meson.build  text.c  text_bbulk.c  text_gltex.c  uterm_drm2d_render.c  uterm_drm2d_video.c  uterm_drm3d_render.c  uterm_drm3d_video.c  uterm_drm_shared.c  uterm_drm_shared_internal.h  uterm_fbdev_video.c  uterm_video.c  uterm_video.h  uterm_video_internal.h
tests/: meson.build  test_bbulk.c  test_common.h  test_include.h  test_input.c  test_key.c  test_output.c  test_shl.c  test_text.c  test_vt.c
